--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -1,14 +1,24 @@
 name: Docker Image CI
 
 # when: tag =~ ^v
+# on:
+#   push:
+#     tags:
+#       - "v*.*.*"
+
+# when: branch = master
 on:
   push:
-    tags:
-      - "v*.*.*"
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 # jobs: build-container
 jobs:
   build-container:
+    environment: DOCKER
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
